fix(card styles): adjust background size for dark mode underline animation

--- a/_croucher/cards/_cards.scss
+++ b/_croucher/cards/_cards.scss
@@ -254,7 +254,8 @@
         color: white;
         .dark & {
           color: $black;
-          background-size: 100% 2px;
+          // background-size: 100% 2px; animation underline on dark mode
+          background-size: 0% 2px;
         }
       }
     }
